# sudoku

./: CMakeLists.txt  README.md
src/: .sudoku.c.swp  main.c  sudoku.c  sudoku.h
test/: test001.txt  test002.txt  test003.txt  test004.txt
